--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,4 +7,8 @@ add_subdirectory(lz4)
 
 add_executable(epk2extract main.c crc32.c epk.c epk1.c epk2.c log.c symfile.c util.c lzo-lg.c)
 
+if(STATIC)
+target_link_libraries(epk2extract cramfs squashfs lz4 ${lssl} ${lcrypto} ${lz} ${lzo2} ${lpthreads} ${lc} ${lm})
+else(STATIC)
 target_link_libraries(epk2extract cramfs squashfs lz4 ${OPENSSL_LIBRARIES} ${ZLIB_LIBRARIES} ${LZO_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${M_LIB})
+endif(STATIC)
